Fix for issue: https://github.com/deleteman/lfpr/issues/50 Left edge of stats for projects is cut off when viewing on iPad 2 #50

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -366,6 +366,7 @@ pointer-events: none;
 
 #project-data-panel {
   position: relative;
+  padding-left: 2.5em;
 }
 
 .pr_acceptance_rate {
